2002-09-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkgeometry.c: Add file. It's my mistake.
	* src/rbgdk.c, src/rbgdkevent.c: Move *_gdkevent() to rbgdkevent.c.
	Remove declaration of gdkEvent*.

2002-09-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkrequision.c: Fix a param of G_DEF_CLASS from mGdk to mGtk.
	* src/rbgtkctree.c: Apply G_DEF_CLASS to Gtk::CTreeNode.
	* src/rbgdkgeometry.c: Separate from src/rbgdkwindow.c.
	* src/rbgdkgeometry.c, src/rbgtkwindow.c,src/rbgtk.h: 
	make GDK_TYPE_GEOMETRY as boxed object and apply G_DEF_CLASS.
	* src/rbgtk.c, src/rbgtkprevinfo.c, src/rbgtkobject.c: 
	Move Gtk::PreviewInfo to src/rbgtkprevinfo.c.
	Make Gtk::Preview as GTK_DISABLE_DEPRECATED.
	
2002-09-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkregion.c, src/rbgdkatom.c, src/rbgtk.h: 
	make GDK_TYPE_REGION, GDK_TYPE_ATOM as boxed object	
	and apply G_DEF_CLASS.
	* src/rbgtkrequisition.c: Apply G_DEF_CLASS.
	* src/rbgdk.c, src/rbgtk.h: remove make_tobj(), get_tobj().

2002-08-30  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb, src/rbgtk.c: abolish NATIVE_WIN32, use G_OS_WIN32 instead
	* src/rbgtk.h: include appropriate header file for GDK_ROOT_WINDOW
	when gdk target is linux-fb or directfb
	* rbgdkwindow.c: don't define Gdk::Window.root_window if
	GDK_ROOT_WINDOW isn't defined.

2002-08-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkmenubar.c: Remove Gtk::MenuBar#set_shadow_type
	(pointed out by Masahiro Sakai <sakai@tom.sfc.keio.ac.jp>).

2002-08-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkdraw.c: Remove gdkSegment. Remove Gdk::Drawable#geometry,
	because it was only for Gdk::Window.
	Add Gdk::Drawable#size, #depth.
	* src/rbgdkpixmap.c: Bugfix for Gdk::Pixmap#create_* when tcolor is Qnil.
	* src/rbgdkimage.c: Apply G_DEF_CLASS.
	* src/rbgtkdata.c, src/rbgtkobject.c: Remove Gtk::Data. Remove file.
	* src/rbgtkadjustment.c, src/rbgtktooltips.c: 
	Separate file from rbgtkdata.c.

2002-08-29  Masao Mutoh  <mutoh@highway.ne.jp>
