@@ -1,5 +1,10 @@
 2002-09-09  Masao Mutoh  <mutoh@highway.ne.jp>
 
+	* src/rbgtkctree.c: Bugfix for segmentation fault.
+	* src/rbgdkevents.c: Code clean up.
+	
+2002-09-09  Masao Mutoh  <mutoh@highway.ne.jp>
+
 	* src/rbgdkgeometry.c: Add file. It's my mistake.
 	* src/rbgdk.c, src/rbgdkevent.c: Move *_gdkevent() to rbgdkevent.c.
 	Remove declaration of gdkEvent*.
